<resources>
    <string name="app_name">note</string>
    <string name="addHeader">Add Contact List</string>
    <string name="enter_FN">Enter the First Name</string>
    <string name="enter_LN">Enter the Last Name</string>
    <string name="enter_P">Enter the Phone Number</string>
    <string name="Enter_discription">Enter the Discription</string>
    <string name="contact_title">Contact Saving List</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="phone">Phone</string>
    <string name="discription">Discription</string>
    <string name="uHeader">Update Contact Saving</string>
    <string name="edit_fname">Edit First Name</string>
    <string name="edit_lname">Edit Last Name</string>
    <string name="edit_phone">Edit Phone Number</string>
    <string name="edit_discription">Edit Discription</string>

</resources>