<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation = "horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/fNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fName"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/lNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lName"
                android:textColor="@color/green"
                android:layout_below="@id/fNameView"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/updateButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd = "true"
                android:layout_marginEnd="40dp"
                android:src="@drawable/ic_android_edit_24dp"/>

            <ImageView
                android:id="@+id/deleteButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd = "true"
                android:layout_marginEnd="2dp"
                android:src="@drawable/ic_android_delete_24dp"/>

        </RelativeLayout>
    
        <TextView
            android:id="@+id/phoneView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:maxLines="1"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/discView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discription"
            android:maxLines="3"
            android:layout_marginTop="4dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>